--- a/packages/ui/src/components/dropdown-menu/DropdownMenu.astro
+++ b/packages/ui/src/components/dropdown-menu/DropdownMenu.astro
@@ -6,7 +6,7 @@
  *
  * @preview
  * <DropdownMenu>
- *    <DropdownMenuTrigger variant="outline">Open</DropdownMenuTrigger>
+ *   <DropdownMenuTrigger variant="outline">Open</DropdownMenuTrigger>
  *   <DropdownMenuContent align="start">
  *     <DropdownMenuLabel>My Account</DropdownMenuLabel>
  *     <DropdownMenuGroup>
@@ -27,11 +27,10 @@
  * ```astro nocollapse
  * ---
  * import { DropdownMenu, DropdownMenuTrigger, DropdownMenuContent, DropdownMenuItem } from '@bejamas/ui/components/dropdown-menu';
- * import { Button } from '@bejamas/ui/components/button';
  * ---
  *
  * <DropdownMenu>
- *   <Button variant="outline" data-slot="dropdown-menu-trigger">Menu</Button>
+ *   <DropdownMenuTrigger variant="outline">Menu</DropdownMenuTrigger>
  *   <DropdownMenuContent>
  *     <DropdownMenuItem>Item 1</DropdownMenuItem>
  *   </DropdownMenuContent>
