fix(ui/dropdown): improve animations

--- a/apps/web/src/components/PageTitle.astro
+++ b/apps/web/src/components/PageTitle.astro
@@ -247,7 +247,7 @@ const options = [...filteredDefaultOptions, ...customOptions];
             >
               <ChevronDown class="size-4" />
             </Button>
-            <DropdownMenuContent class="p-1">
+            <DropdownMenuContent>
               {options.map((option) => (
                 <DropdownMenuItem class="p-0">
                   <Button
