--- a/packages/ui/src/components/popover/PopoverContent.astro
+++ b/packages/ui/src/components/popover/PopoverContent.astro
@@ -3,39 +3,35 @@ import type { HTMLAttributes } from "astro/types";
 import { cn } from "@bejamas/ui/lib/utils";
 
 type Props = {
+  side?: "top" | "bottom" | "left" | "right";
   align?: "start" | "center" | "end";
   sideOffset?: number;
   class?: string;
 } & HTMLAttributes<"div">;
 
 const {
-  align = "center",
+  side,
+  align,
   sideOffset = 4,
   class: className = "",
   ...rest
 } = Astro.props as Props;
-
-const alignClasses = {
-  start: "left-0",
-  center: "left-1/2 -translate-x-1/2",
-  end: "right-0",
-};
-
 ---
 
-<!-- Outer: visibility + group + positioning -->
+<!-- Outer: visibility + state hooks (position is computed by @data-slot/popover) -->
 <div
   {...rest}
   data-slot="popover-content"
+  data-side={side}
   data-align={align}
+  data-side-offset={sideOffset}
   style={`--side-offset: ${sideOffset}px`}
   class={cn(
     "group/popover-content",
-    "absolute top-full mt-[var(--side-offset)] z-50",
-    alignClasses[align],
-    "hidden data-[state=open]:block [transition:display_150ms_allow-discrete]",
-    "[--origin-y:top] data-[side=top]:[--origin-y:bottom]",
-    "data-[align=start]:[--origin-x:left] data-[align=center]:[--origin-x:center] data-[align=end]:[--origin-x:right]",
+    "z-50",
+    "hidden data-[state=open]:block [transition:display_150ms_allow-discrete] starting:data-[state=closed]:block",
+    "[--origin-x:center] [--origin-y:top] data-[side=top]:[--origin-y:bottom]",
+    "data-[align=start]:[--origin-x:left] data-[align=end]:[--origin-x:right]",
     className,
   )}
 >
@@ -48,6 +44,8 @@ const alignClasses = {
       "group-data-[state=open]/popover-content:animate-in group-data-[state=closed]/popover-content:animate-out",
       "group-data-[state=closed]/popover-content:fade-out-0 group-data-[state=open]/popover-content:fade-in-0",
       "group-data-[state=closed]/popover-content:zoom-out-95 group-data-[state=open]/popover-content:zoom-in-95",
+      "group-data-[side=bottom]/popover-content:slide-in-from-top-2 group-data-[side=top]/popover-content:slide-in-from-bottom-2",
+      "group-data-[side=left]/popover-content:slide-in-from-right-2 group-data-[side=right]/popover-content:slide-in-from-left-2",
       "[transform-origin:var(--origin-x)_var(--origin-y)]",
       "[--tw-animation-fill-mode:both]",
     )}
