--- a/packages/ui/src/components/navigation-menu/NavigationMenuContent.astro
+++ b/packages/ui/src/components/navigation-menu/NavigationMenuContent.astro
@@ -4,22 +4,40 @@ import { cn } from "@bejamas/ui/lib/utils";
 
 type Props = {
   class?: string;
+  align?: "start" | "center" | "end";
+  alignOffset?: number;
+  side?: "top" | "bottom";
+  sideOffset?: number;
 } & HTMLAttributes<"div">;
 
-const { class: className = "", ...rest } = Astro.props as Props;
+const {
+  class: className = "",
+  align = "start",
+  alignOffset = 0,
+  side = "bottom",
+  sideOffset = 4,
+  ...rest
+} = Astro.props as Props;
 ---
 
 <div
   {...rest}
   data-slot="navigation-menu-content"
+  data-align={align}
+  data-align-offset={alignOffset}
+  data-side={side}
+  data-side-offset={sideOffset}
+  hidden
   class={cn(
-    // init state
-    "opacity-0 pointer-events-none",
-    // animation
-    "transition-discrete transition-[opacity,transform] duration-150 ease-out",
-    "data-[state=active]:opacity-100 fade-in data-[state=active]:pointer-events-auto data-[state=inactive]:fade-out data-[state=inactive]:pointer-events-none",
-    "data-[motion='from-right']:animate-slide-in-from-right-4 data-[motion=from-left]:animate-slide-in-from-left-4 data-[motion=to-right]:animate-slide-to-right-4 data-[state=active]:animate-in data-[state=inactive]:animate-out",
-    "absolute z-20 top-full pt-2",
+    "transition-[opacity,translate,filter] duration-250 ease-[cubic-bezier(0.32,0.72,0,1)]",
+    "data-starting-style:opacity-0 data-starting-style:pointer-events-none",
+    "data-[ending-style]:opacit-0",
+    "data-[motion=from-right]:animate-in data-[motion=from-right]:fade-in data-[motion=from-right]:slide-in-from-right-50",
+    "data-[motion=from-left]:animate-in data-[motion=from-left]:fade-in data-[motion=from-left]:slide-in-from-left-50",
+    // slide exit — transition TO these values
+    "data-ending-style:animate-out data-ending-style:fade-out",
+    "data-[motion=to-left]:data-[ending-style]:slide-out-to-left-50 data-[motion=to-right]:data-[ending-style]:slide-out-to-right-50",
+    "absolute",
     className,
   )}
 >
