--- a/packages/ui/src/components/navigation-menu/NavigationMenuIndicator.astro
+++ b/packages/ui/src/components/navigation-menu/NavigationMenuIndicator.astro
@@ -13,10 +13,10 @@ const { class: className = "", ...rest } = Astro.props as Props;
   {...rest}
   data-slot="navigation-menu-indicator"
   class={cn(
-    "absolute bg-muted z-0 rounded-md transition-all duration-150 pointer-events-none opacity-0 data-[state=visible]:opacity-100",
-    "translate-x-[var(--indicator-left,0px)] translate-y-[var(--indicator-top,0px)]",
+    "absolute bg-muted/50 z-0 rounded-md data-instant:transition-opacity transition-[translate,width,height] duration-150 ease pointer-events-none opacity-0 data-[state=visible]:opacity-100",
+    "translate-x-(--indicator-left,0px) translate-y-(--indicator-top,0px)",
+    "w-(--indicator-width,0) h-(--indicator-height,0)",
     className,
   )}
-  style="width: var(--indicator-width, 0); height: var(--indicator-height, 0);"
 >
 </div>
